tests/negative/gold/import6-test.gold
tests/negative/import6-test.toit:5:24: error: Unresolved show 'foo'
import .import6-a show foo
                       ^~~
Compilation failed
